<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homepage">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@color/color_white"
       >
       <android.support.v7.widget.Toolbar
           android:layout_width="match_parent"
           android:layout_height="56dp">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/menu"
                   android:id="@+id/image_menu"
                 android:layout_marginTop="10dp"
                   />
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/setting_obama"
                   android:layout_alignParentRight="true"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="10dp"
                   />
           </RelativeLayout>

       </android.support.v7.widget.Toolbar>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:background="@color/color_white">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/linear_layout">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/obama"
                       android:id="@+id/image_view"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="end">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barack_obama"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/color_blacl"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/nepali_congrees_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nepali_congress"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/color_blacl"
            android:layout_marginLeft="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kathmandu"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>

               </RelativeLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:background="@color/color_gray"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/nepali_congress"
                   android:gravity="center_horizontal"
                   android:layout_marginTop="20dp"
                   android:layout_marginLeft="10dp">
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/congress_tree"
                   android:layout_marginLeft="20dp"
                   android:background="@color/color_gray"
                   android:scaleType="fitXY"
                   />
               </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nepali_congress"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Party symbol"
                android:textSize="12sp"
                android:padding="8dp"
                android:textColor="@color/color_white"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_alignParentRight="true"
                   android:layout_margin="20dp"
                   >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My agenda"
                 android:textColor="@color/colorPrimary"
                 />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="state government"
                       android:textColor="@color/colorPrimary"
                       />

               </LinearLayout>
               
           </RelativeLayout>

           
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/color_how_to"
           android:gravity="center_horizontal"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="horizontal"
           >
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/playbutton"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:scaleType="fitXY"
     />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/how_to"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="10dp"
               android:textStyle="bold"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="20dp"
           android:background="@color/color_of_agenda">
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="My Network"
                  android:textAllCaps="false"
                  android:textColor="@color/colorPrimaryDark"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="10dp"
                  android:textStyle="bold"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:text="@string/padna_ko_lagi"
                   android:textSize="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="10dp"/>

           </RelativeLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:background="@color/colorPrimary"
                   android:layout_marginLeft="10dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:padding="10dp"
                   android:layout_weight=".33"

                  >
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:scaleType="fitXY"
                       android:src="@drawable/text_document"
                       android:layout_marginRight="4dp"
                       android:layout_marginLeft="4dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Text"
                      android:layout_marginRight="4dp"
                       android:textStyle="bold"
                       android:layout_gravity="center_vertical"
                       android:textColor="@color/color_white"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:background="@color/colorPrimary"
                   android:layout_marginLeft="10dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:padding="10dp"
                   android:layout_weight=".33"

                   >
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:scaleType="fitXY"
                       android:src="@drawable/speaker"
                       android:layout_marginRight="4dp"
                       android:layout_marginLeft="4dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Audio"
                       android:layout_marginRight="4dp"
                       android:textStyle="bold"
                       android:layout_gravity="center_vertical"
                       android:textColor="@color/color_white"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:background="@color/colorPrimary"
                   android:layout_marginLeft="10dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:layout_marginRight="10dp"
                   android:padding="10dp"
                   android:layout_weight=".33"


                   >
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:scaleType="fitXY"
                       android:src="@drawable/video"
                       android:layout_marginRight="4dp"
                       android:layout_marginLeft="4dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Video"
                       android:layout_marginRight="4dp"
                       android:textStyle="bold"
                       android:layout_gravity="center_vertical"
                       android:textColor="@color/color_white"/>
               </LinearLayout>


           </LinearLayout>

       
   </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/colorPrimary"
           android:layout_marginTop="20dp"
           android:id="@+id/news_n_notification">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="news and announcement"
               android:textAllCaps="true"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:textColor="@color/color_white"
               />

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ListView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/list_of_news"></ListView>
       </LinearLayout>


</LinearLayout>
</LinearLayout>